<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/new_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/school_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/new_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="@string/start_hint"/>
        <EditText
            android:id="@+id/new_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="@string/end_hint"/>
    </LinearLayout>
    <EditText
        android:id="@+id/new_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_hint"/>

</LinearLayout>