<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.iamjiangtian.myresume.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id = "@+id/name_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/profilePic">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jiangtian Wang"
                    android:textSize="32dp" />

                <ImageButton
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/ic_mode_edit_black_24px" />
            </LinearLayout>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/name_section"
                android:layout_marginTop="6dp"
                android:layout_toLeftOf="@+id/profilePic"
                android:text="jiw077@uscd.edu"
                android:textSize="14dp" />

            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:background="@android:color/black" />
        </RelativeLayout>

        <!-- Education Block-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/section_education"
                android:textSize="32dp" />

            <ImageButton
                android:id="@+id/add_edu_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_add_black_24px" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/education_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical"/>


        <!-- Experience Block-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/section_experiences"
                android:textSize="32dp" />

            <ImageButton
                android:id="@+id/add_exp_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_add_black_24px" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/experience_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <!-- Projects -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/section_projects"
                    android:textSize="32dp" />

                <ImageButton
                    android:id="@+id/add_project_btn"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/ic_add_black_24px" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/project_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>